Remove extra parameters